--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.3",
     "http-server": "^14.1.1",
     "nodemon": "^3.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pug": "^3.0.3"
   }
 }
